--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -78,9 +78,9 @@ section#contact
 	.container
 		.row
 			.column.column-12
-				h3 Get in touch to start your project
-			.column.column-4
-			.column.column-4.column.column-8.column.column-8
+				h1 Get in touch to start your project
+		.row
+			.column.column-12
 				form(action='//formspree.io/celso@pocholabs.com', method='POST')
 					.form-group
 						input(type='text', name='name', class="form-control", placeholder="Your Name")
@@ -89,8 +89,7 @@ section#contact
 					.form-group
 						textarea(type='text', name='message', class="form-control", placeholder="Your Message")
 					.form-group
-						input(type='submit', value='Send', class="form-control btn btn-primary")
-			.column.column-4
+						input(type='submit', value='Send', class="form-control")
 
 footer
 	.container
