Style the footer a bit more

--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -234,6 +234,15 @@ footer {
   .social-media {
     a {
       color: #fff;
+      text-align: center;
+      width:100%;
+      &:hover {
+        color: $color-blue;
+      }
+      i {
+        text-align: center;
+        font-size: 5em;
+      }
     }
   }
 }
