--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -163,8 +163,19 @@ header {
   height: 100vh;
   color: #fff;
   @media screen and (min-width: 480px) {
+    .container {
+      display: flex;
+    }
     .row {
-      padding-top: 160px;
+      display: flex;
+      height: 100%;
+      //padding-top: 160px;
+      align-items: center;
+      .column {
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+      }
     }
   }
   svg {
