--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -218,6 +218,10 @@ header {
 
 }
 
+#about{
+  min-height: 100vh;
+}
+
 #services {
   background: url('../img/rm7fqriqb94-oliur-rahman.jpg');
   background-position: center;
@@ -225,11 +229,13 @@ header {
   background-size: cover;
   background-attachment: fixed;
   color: #fff;
+  min-height: 100vh;
 }
 
 #contact {
   background: $color-orange;
   color: #fff;
+  min-height: 100vh;
   form {
     min-width: 300px;
     max-width: 800px;
@@ -240,7 +246,7 @@ header {
 footer {
   background: $color-black;
   color: #fff;
-  padding: 30px 10px 80px 10px;
+  padding: 30px 10px 90px 10px;
 
   .social-media {
     a {
