Build portfolio section

--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -42,6 +42,7 @@ section#services
 		.row
 			.column.column-12
 				h1 Services
+		.row
 			.column.column-4
 				.package
 					.p-heading
@@ -72,6 +73,54 @@ section#services
 					//- 	ul
 					//- 		li Scrum Development Workflow
 					//- 		li Working with various stakeholders
+
+section#portfolio
+	.container
+		.row
+			.column.column-12
+				h1 Portfolio
+		.row
+			.column.column-12
+				.p-item
+					img.img-responsive(src="assets/img/portfolio/immigration-wizard.jpg", alt="Immigration Wizard")
+					.overlay.black
+					a(href="https://immigration-wizard.abogadoray.com", target="_blank")
+						.content
+							h3.text-center Immigration Wizard
+
+
+		.row    
+			.column.column-6
+				.p-item
+					img.img-responsive(src="assets/img/portfolio/sonora-tire-shop.jpg", alt="")
+					.overlay.black
+					a(href="http://sonoratires.com", target="_blank")
+						.content
+							h3.text-center Sonora Tire Shop
+			.column.column-6
+				.p-item
+					img.img-responsive(src="assets/img/portfolio/purple-rose-services.jpg", alt="")
+					.overlay.black
+					a(href="http://purplerosetranslations.com", target="_blank")
+						.content
+							h3.text-center Purple Rose Services
+
+		.row    
+			.column.column-6
+				.p-item
+					img.img-responsive(src="assets/img/portfolio/fvaldez.jpg", alt="")
+					.overlay.black
+					a(href="http://purplerosetranslations.com", target="_blank")
+						.content
+							h3.text-center Frances Valdez
+
+			.column.column-6
+				.p-item
+					img.img-responsive(src="assets/img/portfolio/ileana-y-celso.jpg", alt="")
+					.overlay.black
+					a(href="http://ileanaycelso.com", target="_blank")
+						.content
+							h3.text-center Ileana Y Celso
 
 
 section#contact
