--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -218,6 +218,10 @@ header {
 
 }
 
+section{
+  padding-top: 80px;
+}
+
 #about{
   min-height: 100vh;
 }
@@ -230,6 +234,62 @@ header {
   background-attachment: fixed;
   color: #fff;
   min-height: 100vh;
+}
+
+#portfolio{
+  h1 {
+    margin-bottom: 10px;
+  }
+  .p-item{
+    position: relative;
+    margin: 55px 0px 5px 0px;
+
+    .black {
+      -moz-transition: all $anim-timing-service;
+      -webkit-transition: all $anim-timing-service;
+      transition: all $anim-timing-service;
+    }
+
+    .content{
+      position: absolute;
+      padding-top: 80px;
+      width: 100%;
+      height: 100%;
+      top:0px;
+      left:0px;
+      color: #fff;
+      -moz-transition: all $anim-timing-service;
+      -webkit-transition: all $anim-timing-service;
+      transition: all $anim-timing-service;
+
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+
+      h3 {
+        font-weight: bolder;
+        -moz-transition: all $anim-timing-service;
+      -webkit-transition: all $anim-timing-service;
+      transition: all $anim-timing-service;
+      }
+    }
+
+  &:hover {
+    .black {
+      background: rgba(0,0,0,0.3);
+    }
+    .content {
+      padding-top:-20px;
+      top: -120px;
+    }
+
+    h3 {
+      font-size: 1.3em;
+      color: $color-black;
+    }
+  }
+  }
 }
 
 #contact {
