--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -42,37 +42,50 @@ section#services
 		.row
 			.column.column-12
 				h1 Services
-		.row
-			.column.column-4
-				.package
+
+		.package
+			.row
+				.column.column-4
+					img.img-responsive.img-circle.img-centered(src="assets/img/graphic-design.jpg")
+
+				.column.column-8
 					.p-heading
 						h3.text-center Graphic Design
-					//- .p-content
-					//- 	p From wireframing to branding
-					//- 	ul
-					//- 		li HTML 5 and CSS3
-					//- 		li Mobile-first design
-					//- 		li Focus on user experience
+					.p-content
+						p From wireframing to branding
+						ul
+							li HTML 5 and CSS3
+							li Mobile-first design
+							li Focus on user experience
 
-			.column.column-4
-				.package.popular
+
+		.package
+			.row
+				.column.column-8
 					.p-heading
-						h3.text-center Web Development
-					//- .p-content
-					//- 	p * We choose the best framework for your needs
-					//- 	ul
-					//- 		li Web Applications
-					//- 		li WordPress Sites
-					//- 		li Static Sites
-			.column.column-4
-				.package
+						h3.text-center Web Development 
+					.p-content
+						p * We choose the best framework for your needs
+						ul
+							li Web Applications
+							li WordPress Sites
+							li Static Sites
+				.column.column-4     
+					img.img-responsive.img-circle.img-centered(src="assets/img/coding.jpg")
+
+
+		.package
+			.row
+				.column.column-4
+					img.img-responsive.img-circle.img-centered(src="assets/img/management.jpg")
+				.column.column-8
 					.p-heading
 						h3.text-center Project Management
-					//- .p-content
-					//- 	p We follow industry best practices
-					//- 	ul
-					//- 		li Scrum Development Workflow
-					//- 		li Working with various stakeholders
+					.p-content
+						p We follow industry best practices
+						ul
+							li Scrum Development Workflow
+							li Working with various stakeholders
 
 section#portfolio
 	.container
