--- a/_harp/public/_layout.jade
+++ b/_harp/public/_layout.jade
@@ -25,6 +25,7 @@ html(lang="en")
 
 		!= yield
 
+		script(src="assets/js/aos.js")
 		script(src="assets/js/main.js")
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
