Compile to root

--- a/_harp/public/assets/css/modules/variables.scss
+++ b/_harp/public/assets/css/modules/variables.scss
@@ -4,7 +4,7 @@ $color-white: #ececec;
 $color-blue: #38BEE5;
 $color-orange: #eb6810;
 
-$bright: lighten($color-blue, 10%);
+$bright: #77daf7;
 
 $anim-timing-service: 0.5s;
 
