--- a/_harp/public/_layout.jade
+++ b/_harp/public/_layout.jade
@@ -3,7 +3,8 @@ html(lang="en")
 	head
 		title PochoLabs | Web App Development
 		link(rel='manifest', href='manifest.json')
-		link(rel="stylesheet", href="assets/css/font-awesome.min.css")
+		//link(rel="stylesheet", href="assets/css/font-awesome.min.css")
+		link(rel="stylesheet", href="assets/fonts/pocholabs.css")
 		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
 
 		link(rel="stylesheet" href="assets/css/main.css")
@@ -26,6 +27,7 @@ html(lang="en")
 		!= yield
 
 		script(src="assets/js/aos.js")
+		script(src="assets/js/smoothscroll.js")
 		script(src="assets/js/main.js")
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
