--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -1,7 +1,7 @@
 //@import 'font-awesome.min';
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
-@import '../fonts/pocholabs.css';
+//@import '../fonts/pocholabs.css';
 @import 'modules/variables';
 @import 'modules/reset';
 @import 'modules/utils';
@@ -340,4 +340,39 @@ footer {
       }
     }
   }
+}
+
+form {
+	width: 100%;
+	.form-group {
+		width: 100%;
+		input, textarea {
+			width: 100%;
+			border: 3px solid #fff;
+			background: none;
+			padding: 15px;
+			margin: 3px auto;
+      color: #fff;
+      font-size: 16px;
+      &::placeholder{
+        color: #fff;
+        font-size: 16px;
+      }
+      &:focus {
+        box-shadow: 0px 0px 14px #fff;
+        outline-color: #fff;
+      }
+		}
+    input[type="submit"] {
+      border-radius: 5px;
+      background: #fff;
+      color: $color-black;
+      font-size: 20px;
+      text-transform: uppercase;
+      font-weight: bolder;
+      &:focus {
+        box-shadow: none;
+      }
+    }
+	}
 }
